--- a/css/main.css
+++ b/css/main.css
@@ -2199,6 +2199,7 @@ section {
   height: 581px;
   background-color: white;
   padding: 40px;
+  z-index: 150;
   transform: translate(-50%, -50%) scale(1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2289,7 +2290,7 @@ section {
   padding-right: 16px;
   padding-left: 16px;
   resize: none;
-  font-family: Roboto;
+  font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
@@ -2361,5 +2362,19 @@ section {
   border-radius: 4px;
   margin-top: 30px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+    max-width: 450px;
+    height: 609px;
+  }
+  .modal-check {
+    font-size: 11px;
+    line-height: 1.16;
+    /* identical to box height */
+    letter-spacing: 0.03em;
+    margin-top: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
