--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -22,6 +22,8 @@
     height: 581px;
     background-color: rgba(255, 255, 255, 1);
     padding: 40px;
+
+    z-index: 150;
     
     transform: translate(-50%, -50%) scale(1);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -112,7 +114,7 @@
 
     resize: none;
 
-    font-family: Roboto;
+    font-family:var(--main-font);
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.01em;
@@ -186,4 +188,19 @@
     margin-top: 30px;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+    .modal {
+        max-width: 450px;
+        height: 609px;
+    }
+    .modal-check {
+        font-size: 11px;
+        line-height: 1.16;
+        /* identical to box height */
+
+        letter-spacing: 0.03em;
+        margin-top: 20px;
+    }
 }
