--- a/css/main.css
+++ b/css/main.css
@@ -168,9 +168,6 @@ section {
     opacity: 1;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .mobile-menu__list:not(:last-child) {
-    margin-bottom: 32px;
-  }
   .mobile-menu__item {
     font-family: var(--main-font);
     font-weight: 500;
@@ -178,6 +175,9 @@ section {
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+  }
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
   }
 }
 
