--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,7 +20,7 @@
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
-      }
+    }
     .menu-btn,
     .mobile-menu__close-btn {
         border: none;
@@ -61,9 +61,6 @@
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     }
-    .mobile-menu__list:not(:last-child) {
-        margin-bottom: 32px;
-    }
     .mobile-menu__item {
         font-family: var(--main-font);
         font-weight: 500;
@@ -72,6 +69,10 @@
         letter-spacing: 0.02em;
     
         color: var(--main-text-color);
+
+        &:not(:last-child){
+            margin-bottom: 32px;
+        }
     }
     
 }
